<resources>
    <string name="app_name">微信</string>

    <!-- app ActionBar菜单的名字-->
    <string name="action_search">搜索</string>
    <string name="action_more">更多</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_help_feedback">帮助与反馈</string>

    <!-- APP底部Tab的名字-->
    <string name="tab_main">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>

</resources>
