<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/actionbar_search"
        android:showAsAction="ifRoom|collapseActionView"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_group_chat"
        android:title="@string/action_group_chat"
        android:icon="@drawable/menu_group_chat" />
    <item
        android:id="@+id/action_add_friend"
        android:title="@string/action_add_friend"
        android:icon="@drawable/menu_add_friend" />
    <item
        android:id="@+id/action_scan"
        android:title="@string/action_scan"
        android:icon="@drawable/menu_scan" />
    <item
        android:id="@+id/action_feedback"
        android:title="@string/action_help_feedback"
        android:icon="@drawable/menu_feedback" />

</menu>
